--- a/cadastro.css
+++ b/cadastro.css
@@ -1,4 +1,4 @@
-/* * {
+ * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -8,21 +8,21 @@ body {
     width: 100%;
     height: 100vh;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background: linear-gradient(-45deg, #c1b3ff, #cef8ff);
+    background: linear-gradient(-45deg, #68cadb, #89ffce,  #f4ffb3);
     display: flex;
     justify-content: center;
     align-items: center;
-}
 
+}
 .container {
     background-color: azure;
     padding: 35px; /* Ajuste o preenchimento interno conforme necessário */
-    /*border: 3px solid rgb(255, 255, 255);
+    border: 3px solid azure;
     border-radius: 20px;
     max-width: 500px; /* Ajuste a largura máxima conforme necessário */
-/*}
+}
 
-/*.container form {
+.container form {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -34,12 +34,13 @@ body {
 
 .container input {
     width: 95%;
+    
     margin-bottom: 15px;
-    padding: 8px;
+    padding: 7px;
 }
 
 .container button {
-    width: 100%;
+    width: 98%;
     padding: 10px;
     border-radius: 5px;
     border: none;
@@ -55,4 +56,9 @@ body {
 h1{
     color: #170a52;
     font-family: Verdana, Geneva, Tahoma, sans-serif; 
-}*/
+}
+
+label{
+    color: #170a52;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
