--- a/cadastro.css
+++ b/cadastro.css
@@ -1,4 +1,4 @@
- * {
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -16,10 +16,10 @@ body {
 }
 .container {
     background-color: azure;
-    padding: 35px; /* Ajuste o preenchimento interno conforme necessário */
+    padding: 35px;  
     border: 3px solid azure;
     border-radius: 20px;
-    max-width: 500px; /* Ajuste a largura máxima conforme necessário */
+    max-width: 500px;  
 }
 
 .container form {
@@ -28,7 +28,7 @@ body {
     align-items: center;
 }
 
-.container label {
+// .container label {
     margin-bottom: 100px;
 }
 
@@ -60,5 +60,5 @@ h1{
 
 label{
     color: #170a52;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-family: Verdana, Geneva, Tahoma, sans-serif; 
 }
